manifests/eks/infra/argocd-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - "argocd.soldesk-group4-pbs-project.click" # 서브도메인으로 변경!
  http:
  - route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
# 깃
